--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 # will have compiled files and executables
 debug/
 target/
-data/
-meta.lua
+main/
+user.json
 out/
+main.sublime-project
+main.sublime-workspace
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
