--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,12 @@
 [workspace]
 resolver = "3"
 members = ["engine", "engine_macro"]
+
+[profile.release]
+opt-level     = 3
+lto           = true
+codegen-units = 1
+strip         = "none"
+
+[profile.dev]
+debug = 0
