remove license header, add panic hook, add get_date/time API

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ user.json
 out/
 main.sublime-project
 main.sublime-workspace
+error_*
+panic_*
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
