--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ user.json
 out/
 error_*
 panic_*
-main.sublime-project
+main.sublime-workspace
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
