--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -5,11 +5,10 @@ edition = "2024"
 
 [dependencies]
 anyhow 	      = { version = "1.0" }
-mlua   	      = { version = "0.11.5", features = ["luajit", "vendored", "anyhow", "serde", "async"] }
-raylib 	      = { version = "5.5.1",  features = ["with_serde"] }
-mimalloc 	  = { version = "0.1.48", features = ["v3"]         }
-chrono        = { version = "0.4" }
-serde  	      = { version = "1.0",    features = ["derive"]     }
+mlua   	      = { version = "0.11.5", features = ["luajit52", "vendored", "anyhow", "serde", "async"] }
+raylib 	      = { version = "5.5.1",  features = ["with_serde"]     }
+mimalloc 	  = { version = "0.1.48", features = ["v3", "override"] }
+serde  	      = { version = "1.0",    features = ["derive"]		    }
 serde_json    = { version = "1.0"    }
 serde-value   = { version = "0.7.0"  }
 rmp-serde     = { version = "1.3.1"  }
@@ -19,4 +18,5 @@ rfd           = { version = "0.17.2" }
 #smol         = { version = "2.0.2"  }
 #smol-macros  = { version = "0.1.1"  }
 zip           = { version = "7.0.0"  }
+chrono        = { version = "0.4" 	 }
 engine_macro  = { path = "../engine_macro" }
